# python-practice

./: .gitignore  pyproject.toml
.devcontainer/: devcontainer.json
