[project]
name = "impact-eval-bootcamp"
description = "効果検証ブートキャンプ用の設定"
authors = [
    { name = "Kazuma Saito" },
]
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "polars>=1.33.1",
    "numpy>=1.22.2",
    "scipy>=1.8.0",
    "matplotlib>=3.5.1",
    "statsmodels>=0.14.1",
    "seaborn>=0.12.2",
    "jupyterlab>=4.0.6",
    "linearmodels>=4.0.0",
    "tqdm>=4.66.1",
    "scikit-learn>=1.3.2",
]

[dependency-groups]
dev = [
    "ruff>=0.11.9",
]
